assets/main.css
/* Global */
.page {
    --primary-color: #a71f1f;
    --light-bg-color: #fff3f3;
    --text-color: #333;

    font:
        400 1rem/1.7 "Montserrat",
        sans-serif;
    color: var(--text-color);
    margin: 0;
}

h1,
h2,
h3 {
    color: var(--text-color);
    margin-top: 0;
}

h1 {
    font-size: 2.3rem;
    line-height: 1.6;
}

h2 {
    font-size: 1.8rem;
    line-height: 1.6;
    margin-bottom: 0;
}

h3 {
    font-size: 1.2rem;
    font-weight: 500;
}

.contained {
    max-width: 90rem;
    width: 90%;
    margin: 0 auto;
}

.visually-hidden {
    position: absolute;
    clip: rect(1px, 1px, 1px, 1px);
    border: 0;
    padding: 0;
    width: 1px;
    height: 1px;
    overflow: hidden;
}

.region {
    margin-top: 4rem;
    margin-bottom: 6rem;
}

.region__title {
    text-align: center;
    margin-bottom: 2rem;
}

.link {
    display: inline-flex;
    align-items: center;
    gap: 0.5rem;
    text-decoration: none;
}

.link--primary {
    padding: 0.8rem 1.5rem;
    background-color: var(--primary-color);
    color: white;
}

.link--secondary {
    color: var(--primary-color);
    font-weight: 500;
}

.btn {
    background-color: var(--primary-color);
    color: white;
    padding: 0.8rem 1.5rem;
    border: none;
    font: inherit;
}

.grid-wrapper {
    display: grid;
}

.flex-wrapper {
    display: flex;
}

.page-head {
    padding-top: 4rem;
    padding-bottom: 4rem;
    background-color: var(--light-bg-color);
    text-align: center;
}

.page-head__title,
.breadcrumbs {
    margin-bottom: 0.6rem;
    text-transform: capitalize;
}

.breadcrumbs__list {
    list-style-type: none;
    padding: 0;
}

.breadcrumbs__item {
    display: inline;
    margin-right: 0.5rem;
}

.breadcrumbs__item:not(:last-child)::after {
    content: "";
    display: inline-block;
    border-right: solid 1px;
    margin-left: 0.6rem;
    transform: skewX(-10deg);
    height: 1rem;
    position: relative;
    top: 2px;
}

.breadcrumbs__link {
    color: var(--primary-color);
    text-underline-position: under;
}

.breadcrumbs__link--current {
    color: var(--text-color);
    text-decoration-line: none;
    font-weight: 500;
}

.card {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
}

.card__img {
    max-width: 100%;
    order: -1;
}

.card > picture {
    order: -1;
}

.list {
    margin-top: 2rem;
}

.list > li:not(:last-child) {
    margin-bottom: 1rem;
}

/* Header */
header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
}

.skip-link {
    position: absolute;
    left: 45%;
    padding: 0.5rem;
    transform: translateY(-200%);
    transition: transform 0.5s;
    text-decoration: none;
    color: var(--primary-color);
}

.skip-link:focus {
    transform: translateY(0%);
}

.logo {
    font-size: 1.6rem;
    font-weight: 500;
    color: var(--text-color);
    text-decoration: none;
    display: inline-flex;
    gap: 0.5rem;
    align-items: center;
}

.hamburger-menu-btn,
.close-menu-btn {
    display: none;
    font-size: 1.5rem;
    background-color: var(--accent-color);
    border-radius: 0.2rem;
    border: none;
    padding: 0.3rem 0.5rem;
    cursor: pointer;
}

.hamburger-menu-btn {
    background-color: var(--primary-color);
    color: white;
}

.close-menu-btn {
    background-color: white;
}

.site-header__nav.show {
    transform: translateX(0);
}

.menu {
    margin: 0;
    display: flex;
    gap: 1.5rem;
    list-style-type: none;
}

.menu__item {
    color: var(--text-color);
    text-decoration: none;
}

.menu-overlay.show {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    height: 100%;
    backdrop-filter: blur(2px);
    background-color: rgb(1 1 1 / 50%);
    width: 100%;
    z-index: 0;
}

/* Hero */
.hero {
    background-image: url("img/hero/hero-large.webp");
    min-height: 820px;
    background-size: cover;
    background-repeat: no-repeat;
}

.hero__text {
    text-align: center;
    padding-top: 6rem;
    max-width: 90%;
    margin: 0 auto;
}

.hero__title {
    font-size: 2.5rem;
    margin-bottom: 0.7rem;
}

.hero__description {
    font-size: 1.2rem;
    line-height: 1.7;
    max-width: 75%;
    /* margin: 0 auto 0 auto; */
    margin-left: auto;
    margin-right: auto;
}

.hero__link {
    margin-top: 1rem;
}

.hero__img {
    display: none;
}

/* About Intro */
.about-intro {
    text-align: center;
}

.about-intro__title {
    font-size: 2rem;
    line-height: 1.6;
    font-weight: 600;
}

.about-intro__description {
    font-size: 1.2rem;
    width: 65%;
    margin-left: auto;
    margin-right: auto;
}

.about-intro__link {
    margin-top: 1rem;
    justify-content: center;
}

/* Services intro */
.services-intro__grid-wrapper {
    grid-template-columns: repeat(3, 1fr);
    gap: 2rem;
}

/* Why choose us */
.why-choose-us {
    background-color: var(--light-bg-color);
    padding-top: 4rem;
    padding-bottom: 4rem;
}

.why-choose-us__grid-wrapper {
    grid-template-columns: repeat(3, 1fr);
    gap: 3rem;
}

.reasons-item {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1.2rem;
    text-align: center;
}

.reasons-item__img {
    order: -1;
}

/* Pricing */
.pricing__grid-wrapper {
    grid-template-columns: 1fr 1fr 1fr;
    gap: 3rem;
}

.package {
    border: solid 2px #ececec;
}

.package--most-popular > .package__type {
    background-color: var(--primary-color);
    color: white;
}

.package__type {
    background-color: #ececec;
    padding: 1rem;
    text-align: center;
}

.package__body {
    padding: 0rem 2rem 2rem 2rem;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.package__price {
    display: block;
    margin-top: 1.5rem;
    font-size: 2.5rem;
    font-weight: 400;
}

.package__price,
.package__description {
    text-align: center;
}

.package__features {
    list-style-image: url("img/icons/checkmark-dark.png");
    list-style-position: inside;
    padding-left: 0;
}
/* ... */

